--- a/debian/indi-sbig/changelog
+++ b/debian/indi-sbig/changelog
@@ -1,3 +1,9 @@
+indi-sbig (2.1) bionic; urgency=medium
+
+  * arm64 support.
+
+ -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sun, 2 Feb 2019 21:30:00 +0300
+
 indi-sbig (2.0) bionic; urgency=medium
 
   * Added option to ignore shutter errors.
